<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/chat_fragments1"
    android:background="@color/black"
    android:layout_height="match_parent"
    tools:context=".chat1Fragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="741dp"
        android:layout_marginTop="20sp"
        android:gravity="center|top"
        android:text="@string/chat1fragment"
        android:textStyle="bold|italic"
        android:textColor="@color/orange"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/id_text_user1"
        android:layout_width="match_parent"
        android:textStyle="bold|italic"
        android:layout_height="wrap_content"
        android:layout_marginTop="90sp"
        android:padding="5sp"

        android:text="@string/user_name1"
        android:textColor="@color/orange"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/edit_username1"
        android:layout_width="match_parent"
        android:textColorHint="@color/white"
        android:layout_height="wrap_content"
        android:layout_marginTop="150sp"
        android:layout_marginRight="10sp"
        android:ems="10"
        android:hint="@string/write_username1"
        android:inputType="text"
        android:padding="5sp" />
    <TextView
        android:id="@+id/id_text_message1"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:textColor="@color/orange"
        android:textStyle="bold|italic"
        android:layout_marginTop="220sp"
        android:layout_marginRight="10sp"
        android:padding="5sp"
        android:text="@string/user1_message"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/edit_usermessage1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="280sp"
        android:layout_marginRight="10sp"
        android:textColorHint="@color/white"
        android:ems="10"
        android:hint="@string/write_user1message"
        android:inputType="text"
        android:padding="5sp" />
    <Button
        android:id="@+id/b_send1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:layout_marginTop="400sp"
        android:layout_marginRight="10sp"
        />


</FrameLayout>